--- a/sinosoft/src/main/resources/jdbc.properties
+++ b/sinosoft/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 # datasource config
 datasource.name=mainDataSource
 datasource.driverClassName=oracle.jdbc.OracleDriver
-datasource.dbUrl= jdbc:oracle:thin:@21.8.129.162:1521:ncsit
-datasource.username=ywusersit
-datasource.password=abc
+datasource.dbUrl= jdbc:oracle:thin:@127.0.0.1:1521:ncsit
+datasource.username=root
+datasource.password=root
 datasource.initialSize=5
 datasource.minIdle=5
 datasource.maxActive=20
